fix logo overlap from nav so you can click it

--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@ nav {
 /*	border: 2px solid green;*/
 	text-align: center;
 	height: 45px;
+	width: 600px;
 	margin: 0 auto;
 	position: relative;
 	bottom: 50px;
